--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'SF'
 - !lcsh 'Coaching (Transportation)'
+- GITenberg
 title: Coaching, with Anecdotes of the Road
 url: http://www.gutenberg.org/ebooks/43093
